2008-11-19  Andrew John Hughes  <ahughes@redhat.com>

	* patches/icedtea-version.patch,
	Reapply Mark Wielaard's patch from
	recent merge.
	
2008-11-18  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am: Fix issues with
	distcheck so generated, pulse-audio
	and plugin files are correctly removed.
	* acinclude.m4:
	Add conditional for native ecj,
	BUILD_NATIVE_ECJ.

2008-11-17  Andrew John Hughes  <ahughes@redhat.com>

	* test/jtreg/excludelist.jdk.jtx:
	Remove NIO tests following mjw's fix.
	
2008-11-17  Andrew John Hughes  <ahughes@redhat.com>

	Merge with IcedTea6.
	* .hgignore,
	* .hgtags,
	* ChangeLog,
	* HACKING,
	* IcedTeaPlugin.cc,
	* Makefile.am,
	* contrib/mixtec-hacks.patch,
	* fsg.sh,
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/CHANGES.txt,
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/SoftAudioPusher.java,
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/SoftFilter.java,
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/SoftJitterCorrector.java,
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/SoftMainMixer.java,
	* overlays/openjdk/jdk/src/share/classes/com/sun/media/sound/SoftVoice.java,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/runtime/JNLPClassLoader.java,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/runtime/JNLPSecurityManager.java,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/security/AccessWarningPane.java,
	* patches/icedtea-6761856-freetypescaler.patch,
	* patches/icedtea-alsa-default-device.patch,
	* patches/icedtea-cc-interp-no-fer.patch,
	* patches/icedtea-display-mode-changer.patch,
	* patches/icedtea-f2i-overflow.patch: Merged.
	* patches/icedtea-linker-libs-order.patch: Rebuilt.
	* patches/icedtea-testenv.patch: Converted to work against TestUtil.
	* patches/icedtea-uname.patch,
	* patches/icedtea-visualvm.patch,
	* plugin/icedtea/sun/applet/PluginAppletViewer.java,